# mosquitto_test_arm

./: .gitignore  CMakeLists.txt  README.md  SUBcopy.cpp1  arm_env_linux.sh  build_project.sh  env_linux.sh  git_push.sh  main_Pub.cpp  main_Pub.cpp11  main_sub copy.cpp  main_sub copy.cpp111  scp_auto.sh
inc/: normal_typedef.h
log/: log.conf
spec/configuration/: client.json  data-item.json  dataitem.json  read_excel.py  server.json  test.json  采集点位列表.xlsx
spec/protobuf/: CMakeLists.txt  datastruct copy.proto  datastruct.proto  genproto.sh
spec/protobuf/inc/: datastruct.pb.h
spec/protobuf/src/: datastruct.pb.cc
